<!-- item_gato.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/imagenGato"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:text="@string/imagen_del_gato"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/nombreGato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_gato"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/pesoGato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peso"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/localidadGato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/localidad"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/descripcionGato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripci_n"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/emocionGato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emocion_gato"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
