<!-- item_gato.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imagenComprador"
            android:text="@string/imagen_del_comprador"
            android:layout_width="125dp"
            android:layout_height="100dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp">
        <TextView
            android:id="@+id/nombreComprador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_comprador"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/localidadComprador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/localidad_del_comprador"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/gatoComprador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gato_a_comprar"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>